--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@mui/material": "^5.11.16",
     "axios": "^1.3.5",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
