--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@mui/material": "^5.11.16",
     "axios": "^1.3.5",
+    "cloudinary": "^1.36.1",
     "dotenv": "^16.0.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
